Social icon size fix on mobile.

--- a/style.css
+++ b/style.css
@@ -487,24 +487,33 @@ section.related.products {
 }
 
 @media screen and (max-width:680px) {
-		.for_blogpost.type-article .w-blog-post-preview, .for_blogpost.type-article .w-blog-post-body {
-   			width: 100%;
-  	}
+	.for_blogpost.type-article .w-blog-post-preview, .for_blogpost.type-article .w-blog-post-body {
+		width: 100%;
+	}
+
+	.single-article main > article {
+		padding-right: 0px !important;
+	}
+	.for_blogpost.type-article .w-blog-post-body, .for_blogpost.type-article .for_sharing.top {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	.for_blogpost.type-article .w-blog-post-body {
+		margin-top: 0px; 
+	}
+	.for_blogpost.type-article .w-blog-post-preview img{
+		height: auto; 
+	}
   
-    .single-article main > article {
-        padding-right: 0px !important;
-    }
-  	.for_blogpost.type-article .w-blog-post-body, .for_blogpost.type-article .for_sharing.top {
-        padding-left: 20px;
-      	padding-right: 20px;
-    }
-  
-  .for_blogpost.type-article .w-blog-post-body {
-   	margin-top: 0px; 
-  }
-  .for_blogpost.type-article .w-blog-post-preview img{
-    height: auto; 
-  }
+	.w-sharing.type_solid .w-sharing-item {
+		min-width: 30px;
+		padding: 0 0px;
+		height: 30px;
+		line-height: 30px;
+		font-size: 12px;
+	}
+
 }
 
 
